2001-11-02  Oliver Kiddle  <opk@zsh.org>

	* 16177: Completion/Unix/Type/_time_zone: also look in
	/usr/lib/locale/TZ for time zones

2001-11-01  Bart Schaefer  <schaefer@zsh.org>

	* 16197: Completion/Zsh/Command/.distfiles,
	Completion/Zsh/Command/_limit, Completion/Zsh/Type/_limits,
	Src/Builtins/rlimits.c: `limit' accepts `unlimited' as a value.

2001-10-26  Wayne Davison  <wayned@users.sourceforge.net>

	* 16184: Src/hist.c: Improved readhistline() to reject binary data
	better.

2001-10-26  Peter Stephenson  <pws@csr.com>

	* 16176: Src/Modules/tcp.c, Src/Modules/zftp.c: after fdclose(),
	TCP control fd is no longer valid, but we still need to remove
	the session cleanly.

2001-10-26  Oliver Kiddle  <opk@zsh.org>

	* 16174: Completion/Unix/Command/_zdump,
	Completion/Unix/Type/_time_zone, Completion/Zsh/Context/_value,
	Completion/Unix/Type/.distfiles: complete value of $TZ

2001-10-26  Peter Stephenson  <pws@csr.com>

	* 16172: Src/Modules/tcp.c, Src/Modules/zftp.c: rename
	freehostent() to zfreehostent() to avoid clash with Solaris libnsl.

	* 16171: Doc/Zsh/zftpsys.yo: minor changes of phrasing.

	* 15793: Src/Modules/zftp.c: require zsh/net/tcp explicitly from
	setup_ function for zftp.

2001-10-25  Peter Stephenson  <pws@csr.com>

	* 16145: Src/Builtins/rlimits.c: try to handle both RLIMITS_VMEM
	and RLIMITS_RSS, even if they are the same value (c.f. 16033).

2001-10-24  Peter Stephenson  <pws@csr.com>

	* 16130: Doc/.cvsignore, Doc/Zsh/manual.yo: Fix for texi2html
	1.64.

2001-10-24  Geoff Wing  <gcw@zsh.org>

	* 16063: Src/zsh.h, Src/options.c, Src/Zle/zle_main.c,
	Src/Zle/zle_refresh.c, Doc/Zsh/options.yo: add transientrprompt
	option to remove right prompt from display when accepting commands

2001-10-23  Bart Schaefer  <schaefer@zsh.org>

	* 16124: Src/loop.c: Fix infinite loop on `case' with xtrace
	(bug introduced by 16041).

2001-10-23  Oliver Kiddle  <opk@zsh.org>

	* 16122: Src/builtin.c, Test/B03print.ztst: only count value